[package]
name = "dnsdb-cli"
version = "0.1.0"
authors = ["mwaitzman <51432220+mwaitzman@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.1.1"
#configparser = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"