[package]
name = "dnsdb-cli-rs"
version = "0.1.0"
authors = ["mwaitzman <51432220+mwaitzman@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
#serde_json = "1.0.64"
#configparser = "2.0.1"
#goto = "0.1.2"
